samples/_failures_safe/1761353565_80fcb2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0f4ffdc4.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_0f4ffdc4.c:158:39: error: ‘INT’ undeclared (first use in this function)
  158 |             if (right > 0 && result < INT
      |                                       ^~~
./samples/SAFE/__tmp_0f4ffdc4.c:158:39: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_0f4ffdc4.c:158:42: error: expected ‘)’ at end of input
  158 |             if (right > 0 && result < INT
      |                ~                         ^
      |                                          )
./samples/SAFE/__tmp_0f4ffdc4.c:158:13: error: expected declaration or statement at end of input
  158 |             if (right > 0 && result < INT
      |             ^~
./samples/SAFE/__tmp_0f4ffdc4.c:158:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0f4ffdc4.c:158:13: error: expected declaration or statement at end of input
